# nix-meson-glfw

./: LICENSE  README.md  app.cpp  exrinfo.cpp  flake.nix  index.html  meson.build  msgpack-dict-to-seq.py  oiio-pc.nix  raii.cpp  release.nix  shell.nix  utils.cpp
.github/workflows/: build.yml
include/viscor/: cmaps.h  heatmaps-dir.h  imgui-utils.h  raii.h  utils.h
subprojects/: implot.wrap  muellan-clipp.wrap
subprojects/packagefiles/imgui-1.81/: meson.build
subprojects/packagefiles/implot-0.11/: meson.build
